lib_LIBRARIES = libmoses.a
libmoses_a_SOURCES = \
	Arc.cpp \
	FactorCollection.cpp \
	Factor.cpp \
	FactorTypeSet.cpp \
	GenerationDictionary.cpp \
	HypothesisCollection.cpp \
	HypothesisCollectionIntermediate.cpp \
	Hypothesis.cpp \
	InputFileStream.cpp \
	LanguageModel.cpp \
	LatticeEdge.cpp \
	LatticePath.cpp \
	Manager.cpp \
	md5.cpp \
	Parameter.cpp \
	Phrase.cpp \
	PhraseDictionary.cpp \
	Sentence.cpp \
	StaticData.cpp \
	TargetPhrase.cpp \
	TranslationOption.cpp \
 	UserMessage.cpp \
 	Util.cpp \
 	WeightOptimization.cpp \
 	Word.cpp \
 	WordsBitmap.cpp

if INTERNAL_LM
libmoses_a_SOURCES += NGramCollection.cpp
endif

if SRI_LM
endif

