bin_PROGRAMS = extract_mbot_rules score_mbot consolidate_mbot

LDADD = -lboost_iostreams

extract_mbot_rules_SOURCES = extract-mbot-main.cpp HoleCollectionMBOT.cpp InputFileStream.cpp OutputFileStream.cpp XmlTree.cpp SentenceAlignmentMBOT.cpp SyntaxTree.cpp tables-core.cpp
score_mbot_SOURCES = score-mbot-main.cpp MbotAlignment.cpp InputFileStream.cpp OutputFileStream.cpp tables-core.cpp
consolidate_mbot_SOURCES = consolidate-mbot-main.cpp InputFileStream.cpp OutputFileStream.cpp tables-core.cpp


