lib_LIBRARIES = libmoses-chart.a
AM_CPPFLAGS = -W -Wall -ffor-scope -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES $(BOOST_CPPFLAGS)
libmoses_chart_a_SOURCES = \
	ChartCell.cpp \
	ChartCellCollection.cpp \
	ChartHypothesis.cpp \
	ChartHypothesisCollection.cpp \
	ChartManager.cpp \
	ChartTranslationOptionCollection.cpp \
	ChartTrellisNode.cpp \
	ChartTrellisPath.cpp \
	ChartTrellisPathCollection.cpp \
	ChartTrellisPathList.cpp \
	Cube.cpp \
	QueueEntry.cpp

CLEANFILES = $(BUILT_SOURCES)



